--- a/index.html
+++ b/index.html
@@ -4,11 +4,78 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Menambahkan io pada -->
     <link rel="shortcut icon" href="./images/kucing.ico" type="image/x-icon">
+    <!-- Link Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+    <!-- Link CSS Font -->
+    <link rel="stylesheet" href="./css/fonts.css">
+    <!-- Link online CSS Bootstrap V 5.1 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hellow World</h1>
-    <p>Hari ini kita berlatih dengan kak Ade</p>
+    <!-- AWAL HEADER -->
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="logo">
+                    <img src="./images/tokopedia-logo.svg" alt="">
+                </div>
+                <ul class="menu">
+                    <li>
+                        <a href="">Our Services</a>
+                    </li>
+                    <li>
+                        <a href="">Why Us</a>
+                    </li>
+                    <li>
+                        <a href="">Testimonial</a>
+                    </li>
+                    <li>
+                        <a href="">FAQ</a>
+                    </li>
+                </ul>    
+                <div class="burger-icon">
+                    <img src="./images/burger-bar.png" alt="">
+                </div> 
+            </div>
+        </div>        
+    </header>
+    <!-- AKHIR HEADER -->
+
+    <!-- AWAL MAIN -->
+    <main class="main">
+        <!-- AWAL HERO SECTION / BANNER -->
+        <section class="hero-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="hero-content">
+                            <h1>Sewa & Rental Mobil Terbaik di kawasan (Lokasimu)</h1>
+                            <p>Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
+                            <a href="http://" class="btn btn-success">Mulai Sewa Mobil</a>
+                        </div>
+                    </div>    
+                </div>
+            </div>
+            
+            <div class="hero-thumbnail">
+                <img src="./images/img_car.png" alt="">
+            </div>
+        </section>
+        <!-- AKHIR HERO SECTION / BANNER -->
+    </main>
+    <!-- AKHIR MAIN -->
+    <footer class="footer"></footer>
 </body>
+
+<link rel="stylesheet" href="/js/popper.min.js">
+<!-- Link Bootsrap -->
+<link rel="stylesheet" href="/js/bootstrap.min.js">
 </html>
