--- a/index.html
+++ b/index.html
@@ -27,20 +27,34 @@
                 <div class="logo">
                     <img src="./images/tokopedia-logo.svg" alt="">
                 </div>
-                <ul class="menu">
-                    <li>
-                        <a href="">Our Services</a>
-                    </li>
-                    <li>
-                        <a href="">Why Us</a>
-                    </li>
-                    <li>
-                        <a href="">Testimonial</a>
-                    </li>
-                    <li>
-                        <a href="">FAQ</a>
-                    </li>
-                </ul>    
+                <!-- AWAL SIDEBAR -->
+                <div class="sidebar">
+                    <div class="top-sidebar">
+                        <h3>BRC</h3>
+                        <div class="close-icon">
+                            <img src="./images/close.svg" alt="">
+                        </div>
+                    </div>
+                    <!-- AWAL MENU -->
+                    <ul class="menu">
+                        <li>
+                            <a href="">Our Services</a>
+                        </li>
+                        <li>
+                            <a href="">Why Us</a>
+                        </li>
+                        <li>
+                            <a href="">Testimonial</a>
+                        </li>
+                        <li>
+                            <a href="">FAQ</a>
+                        </li>
+                    </ul>
+                    <!-- AKHIR MENU -->
+                </div>
+                <!-- AKHIR SIDEBAR -->
+                <div class="overlay-bg"></div>
+                    
                 <div class="burger-icon">
                     <img src="./images/burger-bar.png" alt="">
                 </div> 
@@ -73,9 +87,9 @@
     </main>
     <!-- AKHIR MAIN -->
     <footer class="footer"></footer>
-</body>
 
-<link rel="stylesheet" href="/js/popper.min.js">
-<!-- Link Bootsrap -->
-<link rel="stylesheet" href="/js/bootstrap.min.js">
+    <link rel="stylesheet" href="./js/popper.min.js">
+    <link rel="stylesheet" href="./js/bootstrap.min.js">
+    <link rel="stylesheet" href="./js/script.js">
+</body>
 </html>
